"appVersion" = "App version";

"error.auth.generic" = "Authentication error";
"error.auth.invalidRefreshToken" = "Invalid refresh token";
"error.api.generic" = "Network request error";

"labels.noContent" = "Nothing to display";

"button.login" = "Log in";
"button.done" = "Done";
"button.cancel" = "Cancel";
"button.confirm" = "Yes";
"button.privacy" = "Privacy policy";

"courses.fetching" = "Fetching courses";
"courses.title" = "Courses";
"courses.studying" = "Studying";
"courses.teaching" = "Teaching";
"courses.points" = "p";

"classification.notRated" = "Not rated";
"classification.total" = "Total";
"classification.other" = "Other";

"userRoles.student" = "student";
"userRoles.teacher" = "teacher";

"settings.title" = "Settings";
"settings.logout" = "Log out";
"settings.logoutConfirmTitle" = "Do you really wish to logout?";
"settings.user" = "User";
"settings.user.name" = "Name";
"settings.user.roles" = "Roles";
"settings.options" = "Options";
"settings.language" = "Language";
"settings.semester" = "Semester";
"settings.about" = "About";
"settings.credits" = "Credits";
"settings.termsAndConditions" = "Privacy policy";
"settings.sendFeedback" = "Send feedback";
"settings.rate" = "Rate app";
"settings.teacher.sendNotifications" = "Send notifications to students";
"settings.student.undefinedEvaluationItemsHidden" = "Hide undefined evaluation";

"teacher.tab.group" = "Detail";
"teacher.tab.student" = "Student";
"teacher.students.group" = "Group";
"teacher.students.classification" = "Evaluation item";
"teacher.group.students" = "Students";
"teacher.students.title" = "Student";
"teacher.students.changeButton" = "Change";
"teacher.students.finalGradeEmpty" = "Final grade not specified";
"teacher.students.grading" = "Evaluation items";

"sorter.title" = "Sort by:";
"sorter.name" = "Name";
"sorter.value" = "Value";

"students.title" = "Students";
"students.search" = "Search student";
"students.updateSuccess" = "Evaluation has been updated.";

"notification.request.title" = "";
"notification.request.body" = "";
"notification.request.cancel" = "";
"notification.request.confirm" = "";
"notification.title" = "New notification";
"notification.StudentClassificationChange" = "Evaluation change";

"gdpr.title" = "Personal data processing consent";
"gdpr.message" = "We need to store your user ID and type of the operating system to the external notification server to enable push notifications for the app. If you want to delete the data later, disable push notifications for this app in OS settings.";
"gdpr.agree" = "Agree";
"gdpr.disagree" = "Disagree";

"about.title" = "Credits";
"about.text" = "This app has been developed by Jiří Zdvomka at Faculty of Information Technology, Czech Technical University in Prague as his Bachelor's Thesis.";
"license.title" = "License";
"license.text" = "Copyright [2019] [FIT CTU in Prague]\n\nLicensed under the Apache License, Version 2.0 (the 'License');
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an 'AS IS' BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.";
