...

    func getCourseStudentClassification(username _: String, code _: String) -> Observable<[Classification]> {
        return Observable.just(GradesAPIMock.classifications).delaySubscription(delay, scheduler: MainScheduler.asyncInstance)
    }

    func getCurrentSemestrCode() -> Observable<String> {
        return Observable.just("B182").delaySubscription(delay, scheduler: MainScheduler.asyncInstance)
    }

    func getStudentGroups(forCourse _: String, username _: String?) -> Observable<[StudentGroup]> {
        return Observable.just([
            StudentGroup(id: "A145", name: "Cvičení 1", description: "Cvič 1"),
            StudentGroup(id: "A146", name: "Cvičení 2", description: "Cvič 2")
        ]).delaySubscription(delay, scheduler: MainScheduler.asyncInstance)
    }

    func getClassifications(forCourse _: String) -> Observable<[Classification]> {
        return Observable.just([
            Classification(id: 1, identifier: "test_1", text: [ClassificationText(identifier: "cs", name: "Test 1")], evaluationType: .manual, type: "TEST", valueType: .number, value: .number(3.5), parentId: nil, isHidden: false),
            Classification(id: 2, identifier: "homework", text: [ClassificationText(identifier: "cs", name: "Homework")], evaluationType: .manual, type: "HOMEWORK", valueType: .bool, value: .bool(true), parentId: nil, isHidden: false)
        ]).delaySubscription(delay, scheduler: MainScheduler.asyncInstance)
    }

    func getGroupClassifications(courseCode _: String, groupCode _: String, classificationId _: String) -> Observable<[StudentClassification]> {
        return Observable.just([
...
