...
            make.centerX.equalToSuperview()
            make.top.equalToSuperview().inset(view.frame.height * 0.25) // Relative inset
        }

        // Login button
        let button = UIPrimaryButton()
        button.accessibilityIdentifier = "Login"
        button.setTitle(L10n.Button.login, for: .normal)
        button.addTarget(self, action: #selector(authButtonTapped(_:)), for: .primaryActionTriggered)
        view.addSubview(button)
        button.snp.makeConstraints { make in
            make.width.equalTo(180)
            make.height.equalTo(60)
...
